--- a/javascript/oojs/introduction/oojs.html
+++ b/javascript/oojs/introduction/oojs.html
@@ -11,6 +11,17 @@
   </body>
 
     <script>
+      var person = {name: ['Bob', "Smith"],
+                   age: 32, 
+                    gender: "male",
+                    interests: ["music", "skiing" ],
+                    bio: function () {
+                      alert(this.name[0] + " " + this.name [1] + " is " + " years old. He likes " + this.interests.[0] + " and " + this. intersts[1] + ".");
+                    },
+                    greeting: function() {
+                      alert('Hi! I/'m' + this.name[0] + ".");
+                            }
+                   };
 
     </script>
 </html>
